chore: rename project from Fittrix to SmiTriX
